# feynman

./: .editorconfig  .gitignore  AGENTS.md  DECISIONS.md  LICENSING.md  Makefile  PROGRESS.md  QuantumBook.lean  README.md  SCOPE.md  lake-manifest.json  lakefile.toml  prompt.md
.claude/skills/: README.md
.claude/skills/add-concept/: SKILL.md
.claude/skills/blueprint-node/: SKILL.md
.claude/skills/lean-proof-loop/: SKILL.md
.claude/skills/manim-scene/: SKILL.md
.claude/skills/verso-chapter/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
QuantumBook/: FiniteDim.lean  Foundations.lean
QuantumBook/FiniteDim/: Born.lean  Dynamics.lean  Entanglement.lean  Observable.lean  Qubit.lean
QuantumBook/Foundations/: Spectral.lean
blueprint/src/: content.tex  print.tex  web.tex
blueprint/src/macros/: common.tex
book/: Book.lean  Main.lean
book/Chapters/: Ch00_Substrate.lean  Ch01_Qubit.lean  Ch02_Observable.lean  Ch03_Born.lean  Ch04_Dynamics.lean  Ch05_Entanglement.lean  History.lean  Voices.lean
course/: README.md  foundations.md  history.md  syllabus.md
media/: narrate.py  pyproject.toml
media/manim/ch00/: spectral.py
media/manim/ch01/: qubit.py
media/manim/ch02/: observable.py
media/manim/ch03/: born.py
media/manim/ch04/: dynamics.py
media/manim/ch05/: entanglement.py
media/reels/: index.html
media/scripts/: ch00.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md
references/: bibliography.bib  reading-map.md  sources-directory.md  sources.md
references/pdf/: MANIFEST.md
tools/: check-blueprint-decls.sh
