[project]
name = "quantum-book-media"
version = "0.1.0"
description = "ManimCE animation layer for the verified quantum mechanics book"
requires-python = ">=3.11"
# ManimCE = the maintained Community Edition (manim on PyPI), NOT 3b1b/manim.
# Version is pinned in uv.lock; see DECISIONS.md for the recorded pin.
dependencies = [
    "manim>=0.19.0",
]

[tool.uv]
package = false
